Phase 2 staging: raft stub, exit node forwarding, clickhouse backup
- Added crates/raft with single-node stub (API surface for daemon)
- Added PlainPacket and RaftCommand to protocol crate
- Added ExitClient with HTTP/2, rkyv serialization, health checks
- Added ExitPool with round-robin load balancing
- Added ClickHouseBackup with config toggle, batched writes
- All tests passing (13 total)

--- a/crates/raft/Cargo.toml
+++ b/crates/raft/Cargo.toml
@@ -1,21 +1,17 @@
 [package]
-name = "apfsds-storage"
+name = "apfsds-raft"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 
 [dependencies]
 apfsds-protocol = { path = "../protocol" }
+apfsds-storage = { path = "../storage" }
 
 tokio.workspace = true
-rkyv.workspace = true
+serde.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
-dashmap.workspace = true
-parking_lot.workspace = true
-bytes.workspace = true
-clickhouse.workspace = true
-serde.workspace = true
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
