--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ sled = "0.34"
 clickhouse = "0.12"
 
 # Distributed
-openraft = "0.10"
+openraft = { version = "0.9", features = ["serde", "storage-v2"] }
 
 # Monitoring
 prometheus = "0.13"
