--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/*",
     "daemon",
     "client",
+    "cli",
 ]
 
 [workspace.package]
@@ -48,7 +49,7 @@ sled = "0.34"
 clickhouse = "0.12"
 
 # Distributed
-openraft = { version = "0.9", features = ["serde", "storage-v2"] }
+async-raft = "0.6"
 
 # Monitoring
 prometheus = "0.13"
