--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -31,3 +31,8 @@ tun.workspace = true
 
 # CLI
 clap = { version = "4", features = ["derive"] }
+rkyv.workspace = true
+tokio-tungstenite.workspace = true
+
+[target.'cfg(windows)'.dependencies]
+wintun = "0.4"
