--- a/crates/raft/Cargo.toml
+++ b/crates/raft/Cargo.toml
@@ -12,6 +12,11 @@ tokio.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
+async-raft = { workspace = true }
+anyhow = "1.0"
+async-trait = "0.1"
+reqwest = { workspace = true }
+serde_json = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
