--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -16,6 +16,10 @@ parking_lot.workspace = true
 bytes.workspace = true
 clickhouse.workspace = true
 serde.workspace = true
+byteorder = "1.4"
+crc32fast = "1.3"
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
+tempfile = "3"
