--- a/crates/transport/Cargo.toml
+++ b/crates/transport/Cargo.toml
@@ -20,10 +20,18 @@ dashmap.workspace = true
 parking_lot.workspace = true
 fastrand.workspace = true
 serde.workspace = true
+anyhow.workspace = true
 serde_json.workspace = true
 uuid.workspace = true
 hyper.workspace = true
 reqwest.workspace = true
+async-trait = "0.1"
+tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
+rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
+rustls-pemfile = "2"
+quinn = "0.11"
+russh = { version = "0.45", default-features = false, features = ["flate2"] }
+russh-keys = "0.45"
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
