Implement Phase 4 (Raft Membership) and Phase 6 (Plugin, UI, Mobile)

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,6 +8,11 @@ license.workspace = true
 name = "apfsds"
 path = "src/main.rs"
 
+[lib]
+name = "apfsds_client"
+path = "src/lib.rs"
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 apfsds-protocol = { path = "../crates/protocol" }
 apfsds-crypto = { path = "../crates/crypto" }
