--- a/crates/raft/Cargo.toml
+++ b/crates/raft/Cargo.toml
@@ -5,8 +5,8 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-apfsds-protocol = { path = "../protocol" }
-apfsds-storage = { path = "../storage" }
+apfsds-protocol = { path = "../protocol", version = "0.1.0" }
+apfsds-storage = { path = "../storage", version = "0.1.0" }
 
 tokio.workspace = true
 serde.workspace = true
