--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-apfsds-protocol = { path = "../protocol" }
+apfsds-protocol = { path = "../protocol", version = "0.1.0" }
 
 tokio.workspace = true
 rkyv.workspace = true
