--- a/crates/transport/Cargo.toml
+++ b/crates/transport/Cargo.toml
@@ -5,9 +5,9 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-apfsds-protocol = { path = "../protocol" }
-apfsds-crypto = { path = "../crypto" }
-apfsds-obfuscation = { path = "../obfuscation" }
+apfsds-protocol = { path = "../protocol", version = "0.1.0" }
+apfsds-crypto = { path = "../crypto", version = "0.1.0" }
+apfsds-obfuscation = { path = "../obfuscation", version = "0.1.0" }
 
 tokio.workspace = true
 tokio-tungstenite.workspace = true
