--- a/crates/obfuscation/Cargo.toml
+++ b/crates/obfuscation/Cargo.toml
@@ -3,6 +3,7 @@ name = "apfsds-obfuscation"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "Traffic obfuscation layer for APFSDS (XOR masking, padding, timing)"
 
 [dependencies]
 bytes.workspace = true
