--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -3,6 +3,7 @@ name = "apfsds-daemon"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "APFSDS daemon - distributed proxy network controller"
 
 [[bin]]
 name = "apfsdsd"
